[gd_scene format=3 uid="uid://c20v8dl35dy43"]

[ext_resource type="Script" uid="uid://3hoapbv7n53b" path="res://scenes/interactables/interactable.gd" id="1_u3mly"]
[ext_resource type="FontFile" uid="uid://d263q0lpohl03" path="res://assets/font/PressStart2P-Regular.ttf" id="2_ikuv3"]

[node name="Interactable" type="StaticBody2D" unique_id=75471443]
script = ExtResource("1_u3mly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=520145219]

[node name="InteractionArea" type="Area2D" parent="." unique_id=2015261441]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea" unique_id=1887153074]

[node name="InteractHint" type="PanelContainer" parent="." unique_id=413300057]
visible = false
offset_right = 54.0
offset_bottom = 14.0

[node name="ColorRect" type="ColorRect" parent="InteractHint" unique_id=491444873]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="InteractHint" unique_id=1213311279]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_ikuv3")
theme_override_font_sizes/font_size = 6
text = "Interact"

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
